tests/build/pass/impl_ui_node/all_defaults_no_child.rs
use zero_ui::core::{impl_ui_node, UiNode};

struct Node;
#[impl_ui_node(none)]
impl UiNode for Node {}

// we use the full path to UiNode here to check that no
// unused imports for UiNode are generated by the use in impl.
fn type_assert<T: zero_ui::core::UiNode>(_: T) {}

fn main() {
    type_assert(Node);
}
