tests/build/fail/widget/module_path_missing.rs
use zero_ui::core::widget;

// path is missing
#[widget]
pub mod test_widget {}

fn main() {}
